Preventing feature text from wrapping and making title bold

--- a/components/pages/TrackPage/Feature/Feature.module.scss
+++ b/components/pages/TrackPage/Feature/Feature.module.scss
@@ -4,9 +4,10 @@
   align-items: center;
   font-size: 1.2rem;
   letter-spacing: -0.07rem;
+  white-space: nowrap;
 
   &_title {
-    white-space: nowrap;
+    font-weight: 600;
   }
 }
 
